; ModuleID = '/home/carl/AnghaBench/radare2/libr/util/extr_calc.c_term.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/util/extr_calc.c_term.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_21__ = type { i32 }
%struct.TYPE_20__ = type { i64 }
%struct.TYPE_19__ = type { i32, i32 }

@RNCMUL = common dso_local global i64 0, align 8
@RNCMOD = common dso_local global i64 0, align 8
@RNCDIV = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.TYPE_21__*, %struct.TYPE_20__*, i32)* @term to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @term(%struct.TYPE_21__* %0, %struct.TYPE_20__* %1, i32 %2) #0 {
  %4 = alloca %struct.TYPE_19__, align 4
  %5 = alloca %struct.TYPE_21__*, align 8
  %6 = alloca %struct.TYPE_20__*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.TYPE_19__, align 4
  %9 = alloca %struct.TYPE_19__, align 4
  %10 = alloca %struct.TYPE_19__, align 4
  %11 = alloca %struct.TYPE_19__, align 4
  %12 = alloca %struct.TYPE_19__, align 4
  store %struct.TYPE_21__* %0, %struct.TYPE_21__** %5, align 8
  store %struct.TYPE_20__* %1, %struct.TYPE_20__** %6, align 8
  store i32 %2, i32* %7, align 4
  %13 = load %struct.TYPE_21__*, %struct.TYPE_21__** %5, align 8
  %14 = load %struct.TYPE_20__*, %struct.TYPE_20__** %6, align 8
  %15 = load i32, i32* %7, align 4
  %16 = call i64 @prim(%struct.TYPE_21__* %13, %struct.TYPE_20__* %14, i32 %15)
  %17 = bitcast %struct.TYPE_19__* %8 to i64*
  store i64 %16, i64* %17, align 4
  br label %18

18:                                               ; preds = %99, %3
  %19 = load %struct.TYPE_20__*, %struct.TYPE_20__** %6, align 8
  %20 = getelementptr inbounds %struct.TYPE_20__, %struct.TYPE_20__* %19, i32 0, i32 0
  %21 = load i64, i64* %20, align 8
  %22 = load i64, i64* @RNCMUL, align 8
  %23 = icmp eq i64 %21, %22
  br i1 %23, label %24, label %37

24:                                               ; preds = %18
  %25 = load %struct.TYPE_21__*, %struct.TYPE_21__** %5, align 8
  %26 = load %struct.TYPE_20__*, %struct.TYPE_20__** %6, align 8
  %27 = call i64 @prim(%struct.TYPE_21__* %25, %struct.TYPE_20__* %26, i32 1)
  %28 = bitcast %struct.TYPE_19__* %10 to i64*
  store i64 %27, i64* %28, align 4
  %29 = bitcast %struct.TYPE_19__* %8 to i64*
  %30 = load i64, i64* %29, align 4
  %31 = bitcast %struct.TYPE_19__* %10 to i64*
  %32 = load i64, i64* %31, align 4
  %33 = call i64 @Nmul(i64 %30, i64 %32)
  %34 = bitcast %struct.TYPE_19__* %9 to i64*
  store i64 %33, i64* %34, align 4
  %35 = bitcast %struct.TYPE_19__* %8 to i8*
  %36 = bitcast %struct.TYPE_19__* %9 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %35, i8* align 4 %36, i64 8, i1 false)
  br label %99

37:                                               ; preds = %18
  %38 = load %struct.TYPE_20__*, %struct.TYPE_20__** %6, align 8
  %39 = getelementptr inbounds %struct.TYPE_20__, %struct.TYPE_20__* %38, i32 0, i32 0
  %40 = load i64, i64* %39, align 8
  %41 = load i64, i64* @RNCMOD, align 8
  %42 = icmp eq i64 %40, %41
  br i1 %42, label %43, label %61

43:                                               ; preds = %37
  %44 = load %struct.TYPE_21__*, %struct.TYPE_21__** %5, align 8
  %45 = load %struct.TYPE_20__*, %struct.TYPE_20__** %6, align 8
  %46 = call i64 @prim(%struct.TYPE_21__* %44, %struct.TYPE_20__* %45, i32 1)
  %47 = bitcast %struct.TYPE_19__* %4 to i64*
  store i64 %46, i64* %47, align 4
  %48 = getelementptr inbounds %struct.TYPE_19__, %struct.TYPE_19__* %4, i32 0, i32 1
  %49 = load i32, i32* %48, align 4
  %50 = icmp ne i32 %49, 0
  br i1 %50, label %52, label %51

51:                                               ; preds = %43
  br label %100

52:                                               ; preds = %43
  %53 = bitcast %struct.TYPE_19__* %8 to i64*
  %54 = load i64, i64* %53, align 4
  %55 = bitcast %struct.TYPE_19__* %4 to i64*
  %56 = load i64, i64* %55, align 4
  %57 = call i64 @Nmod(i64 %54, i64 %56)
  %58 = bitcast %struct.TYPE_19__* %11 to i64*
  store i64 %57, i64* %58, align 4
  %59 = bitcast %struct.TYPE_19__* %8 to i8*
  %60 = bitcast %struct.TYPE_19__* %11 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %59, i8* align 4 %60, i64 8, i1 false)
  br label %98

61:                                               ; preds = %37
  %62 = load %struct.TYPE_20__*, %struct.TYPE_20__** %6, align 8
  %63 = getelementptr inbounds %struct.TYPE_20__, %struct.TYPE_20__* %62, i32 0, i32 0
  %64 = load i64, i64* %63, align 8
  %65 = load i64, i64* @RNCDIV, align 8
  %66 = icmp eq i64 %64, %65
  br i1 %66, label %67, label %94

67:                                               ; preds = %61
  %68 = load %struct.TYPE_21__*, %struct.TYPE_21__** %5, align 8
  %69 = load %struct.TYPE_20__*, %struct.TYPE_20__** %6, align 8
  %70 = call i64 @prim(%struct.TYPE_21__* %68, %struct.TYPE_20__* %69, i32 1)
  %71 = bitcast %struct.TYPE_19__* %4 to i64*
  store i64 %70, i64* %71, align 4
  %72 = load %struct.TYPE_21__*, %struct.TYPE_21__** %5, align 8
  %73 = icmp ne %struct.TYPE_21__* %72, null
  br i1 %73, label %74, label %85

74:                                               ; preds = %67
  %75 = getelementptr inbounds %struct.TYPE_19__, %struct.TYPE_19__* %4, i32 0, i32 1
  %76 = load i32, i32* %75, align 4
  %77 = icmp ne i32 %76, 0
  br i1 %77, label %78, label %82

78:                                               ; preds = %74
  %79 = getelementptr inbounds %struct.TYPE_19__, %struct.TYPE_19__* %4, i32 0, i32 0
  %80 = load i32, i32* %79, align 4
  %81 = icmp ne i32 %80, 0
  br i1 %81, label %85, label %82

82:                                               ; preds = %78, %74
  %83 = load %struct.TYPE_21__*, %struct.TYPE_21__** %5, align 8
  %84 = getelementptr inbounds %struct.TYPE_21__, %struct.TYPE_21__* %83, i32 0, i32 0
  store i32 1, i32* %84, align 4
  br label %100

85:                                               ; preds = %78, %67
  %86 = bitcast %struct.TYPE_19__* %8 to i64*
  %87 = load i64, i64* %86, align 4
  %88 = bitcast %struct.TYPE_19__* %4 to i64*
  %89 = load i64, i64* %88, align 4
  %90 = call i64 @Ndiv(i64 %87, i64 %89)
  %91 = bitcast %struct.TYPE_19__* %12 to i64*
  store i64 %90, i64* %91, align 4
  %92 = bitcast %struct.TYPE_19__* %8 to i8*
  %93 = bitcast %struct.TYPE_19__* %12 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %92, i8* align 4 %93, i64 8, i1 false)
  br label %97

94:                                               ; preds = %61
  %95 = bitcast %struct.TYPE_19__* %4 to i8*
  %96 = bitcast %struct.TYPE_19__* %8 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %95, i8* align 4 %96, i64 8, i1 false)
  br label %100

97:                                               ; preds = %85
  br label %98

98:                                               ; preds = %97, %52
  br label %99

99:                                               ; preds = %98, %24
  br label %18

100:                                              ; preds = %94, %82, %51
  %101 = bitcast %struct.TYPE_19__* %4 to i64*
  %102 = load i64, i64* %101, align 4
  ret i64 %102
}

declare dso_local i64 @prim(%struct.TYPE_21__*, %struct.TYPE_20__*, i32) #1

declare dso_local i64 @Nmul(i64, i64) #1

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #2

declare dso_local i64 @Nmod(i64, i64) #1

declare dso_local i64 @Ndiv(i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
